--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
 		<dependency>
 			<groupId>org.springframework.security.oauth</groupId> 
 			<artifactId>spring-security-oauth2</artifactId> 
-			<version>2.0.11.RELEASE</version> 
+			<version>2.0.15</version> 
 		</dependency>
 		<dependency>
 		    <groupId>org.springframework.hateoas</groupId>
